# surya

./: .gitignore  CITATION.cff  CLA.md  LICENSE  README.md  base_ocr.py  demo_app.py  detect_layout.py  detect_pdf.py  detect_text.py  gradio_demo.py  ocr_app.py  ocr_latex.py  ocr_text.py  pyproject.toml  pytest.ini  reading_order.py  run_ocr_app.py  table_recognition.py  texify_app.py  vllm_ocr.py
.github/workflows/: benchmarks.yml  ci.yml  cla.yml  publish.yml  scripts.yml  tests.yml
benchmark/: bench_model.py  detection.py  gcloud_label.py  inline_detection.py  layout.py  order.py  ordering.py  profile.sh  pymupdf_test.py  recognition.py  scoring.py  table_recognition.py  tesseract_test.py  texify.py  viz.sh
benchmark/utils/: bbox.py  scoring.py  tatr.py  tesseract.py  textract.py  verify_benchmark_scores.py
scripts/: verify_benchmark_scores.py
signatures/version1/: cla.json
surya/: __init.py__.py  detection.py  languages.py  layout.py  logging.py  models.py  ocr.py  ocr_error.py  ordering.py  recognition.py  schema.py  settings.py  tables.py
surya/benchmark/: bbox.py  metrics.py  tatr.py  tesseract.py  util.py
surya/common/: __init__.py  load.py  polygon.py  predictor.py  s3.py  util.py
surya/common/adetr/: decoder.py
surya/common/cli/: config.py
surya/common/donut/: encoder.py  processor.py
surya/common/surya/: __init__.py  config.py  flash_attn_utils.py  model.py  schema.py
surya/common/surya/decoder/: __init__.py  config.py  model.py
surya/common/surya/embedder/: __init__.py  model.py
surya/common/surya/encoder/: __init__.py  config.py  model.py
surya/common/surya/processor/: __init__.py  processor.py  schema.py  tokenizer.py
surya/debug/: draw.py  fonts.py  katex.js  render_html.py  text.py
surya/detection/: __init__.py  affinity.py  heatmap.py  loader.py  model.py  parallel.py  processor.py  schema.py  util.py
surya/detection/model/: config.py  encoderdecoder.py
surya/foundation/: __init__.py  cache.py  loader.py  util.py
surya/input/: langs.py  load.py  pdflines.py  processing.py  slicing.py
surya/layout/: __init__.py  loader.py  schema.py  slicer.py  util.py
surya/layout/model/: config.py  decoder.py  encoder.py  encoderdecoder.py
surya/model/: processing.py  segformer.py
surya/model/common/adetr/: decoder.py
surya/model/common/donut/: encoder.py  processor.py
surya/model/detection/: config.py  efficientvit.py  model.py  processor.py  segformer.py
surya/model/layout/: config.py  decoder.py  encoder.py  encoderdecoder.py  model.py  processor.py
surya/model/ocr_error/: encoder.py  model.py
surya/model/ordering/: config.py  decoder.py  encoder.py  encoderdecoder.py  model.py  processor.py
surya/model/recognition/: config.py  decoder.py  encoder.py  encoderdecoder.py  model.py  processor.py  tokenizer.py  tokens.json
surya/model/table_rec/: columns.py  config.py  decoder.py  encoder.py  encoderdecoder.py  model.py  processor.py  shaper.py
surya/ocr_error/: __init__.py  loader.py  schema.py  tokenizer.py
surya/ocr_error/model/: config.py  encoder.py
surya/ollama/: conf.py  ollama.py
surya/postprocessing/: affinity.py  fonts.py  heatmap.py  text.py  util.py
surya/postprocessing/math/: latex.py  render.py
surya/recognition/: __init__.py  cache.py  languages.py  loader.py  postprocessing.py  processor.py  schema.py  tokenizer.py  util.py
surya/recognition/model/: config.py  decoder.py  encoder.py  encoderdecoder.py
surya/scripts/: __init__.py  detect_layout.py  detect_text.py  hf_to_s3.py  ocr_latex.py  ocr_text.py  run_streamlit_app.py  run_texify_app.py  streamlit_app.py  table_recognition.py  texify_app.py
surya/table_rec/: __init__.py  loader.py  processor.py  schema.py  shaper.py
surya/table_rec/model/: config.py  decoder.py  encoder.py  encoderdecoder.py
surya/texify/: __init__.py  loader.py  processor.py  schema.py  util.py
surya/texify/model/: config.py  decoder.py  encoder.py  encoderdecoder.py
surya/text_detection_imports/: __init__.py
surya/util/: mathml.py  parallel.py  session.py
tests/: conftest.py  test_detection.py  test_inline_detection.py  test_latex_ocr.py  test_layout.py  test_ocr_errors.py  test_recognition.py  test_table_rec.py
