[tool.poetry]
name = "surya-ocr"
version = "0.1.5"
description = "Document OCR models for multilingual text detection and recognition"
authors = ["Vik Paruchuri <vik.paruchuri@gmail.com>"]
readme = "README.md"
license = "GPL-3.0-or-later"
repository = "https://github.com/VikParuchuri/surya"
keywords = ["ocr", "pdf", "text detection", "text recognition"]
packages = [
    {include = "surya"}
]
include = [
    "detect_text.py",
]

[tool.poetry.dependencies]
python = ">=3.9,<3.13"
transformers = "^4.36.2"
torch = "^2.1.2"
pydantic = "^2.5.3"
pydantic-settings = "^2.1.0"
python-dotenv = "^1.0.0"
pillow = "^10.2.0"
pypdfium2 = "^4.25.0"
opencv-python = "^4.9.0.80"
tabulate = "^0.9.0"
filetype = "^1.2.0"

[tool.poetry.group.dev.dependencies]
jupyter = "^1.0.0"
pytesseract = "^0.3.10"
pymupdf = "^1.23.8"
snakeviz = "^2.2.0"
datasets = "^2.16.1"
ruff = "^0.1.13"

[tool.poetry.scripts]
surya_detect = "detect_text:main"

[tool.ruff]
select = [
    # Pyflakes
    "F",
    # pycodestyle
    "E",
    "W",
    # isort
    "I",
    # pyupgrade
    "UP",
]
ignore = ["E501", "E203"]
line-length = 120
target-version = "py39"

[tool.ruff.isort]
known-first-party = ["surya"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
